--- a/app/styles/modal.scss
+++ b/app/styles/modal.scss
@@ -1,5 +1,6 @@
 
 [data-focus="popin"] {
+    border:1px solid blue; 
     &[data-size="medium"] {
         [data-focus="popin-window"] {
             width: 50vw;
